# tuish

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: README.md  package.json  tsup.config.ts
cli/src/: app.tsx  headless.ts  index.tsx  types.ts
cli/src/__tests__/: api.test.ts  cli.integration.test.ts  helpers.ts  mock-server.ts
cli/src/components/: Header.tsx
cli/src/hooks/: useAuth.ts  useConfig.ts
cli/src/lib/: api.ts  config.ts  format.ts
cli/src/screens/: MainMenu.tsx
cli/src/screens/products/: List.tsx  Update.tsx
docs/: middleware.ts  next.config.mjs  open-next.config.ts  package.json  wrangler.jsonc
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: index.mdx  meta.json
docs/content/docs/cli/: index.mdx
docs/content/docs/cli-python/: index.mdx  meta.json
docs/content/docs/explanation/: how-tuish-works.mdx  licensing-model.mdx  security-and-data.mdx  stripe-connect-model.mdx
docs/content/docs/guides/: complete-integration-flow.mdx  index.mdx  meta.json
docs/content/docs/how-to/: browser-checkout.mdx  choose-purchase-flow.mdx  install-sdk.mdx  license-verification.mdx  terminal-purchase.mdx
docs/content/docs/reference/: cli.mdx  privacy.mdx  sdk-api.mdx
docs/content/docs/reference/api/: authentication.mdx  checkout.mdx  index.mdx  licenses.mdx  meta.json  reference.mdx
docs/content/docs/sdk/: index.mdx  meta.json
docs/content/docs/sdk-python/: index.mdx  meta.json
docs/content/docs/tutorials/: complete-integration-flow.mdx  getting-started.mdx
docs/public/: openapi.json
docs/src/: css.d.ts
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/app/llms-full.txt/: route.ts
docs/src/app/llms.txt/: route.ts
docs/src/components/: ApiReference.tsx  BloomOverlay.tsx  Features.tsx  Footer.tsx  Hero.tsx  NavTitle.tsx
docs/src/components/terminal/: CommandExecutor.ts  Terminal.tsx
docs/src/lib/: get-llm-text.ts
go/: README.md  cli_vectors_test.go  client.go  client_test.go  crypto.go  crypto_test.go  fingerprint.go  go.mod  go.sum  spec_vectors_test.go  storage.go  tuish.go  tuish_test.go
go/cli/: go.mod  go.sum  main.go
go/cli/cmd/: analytics.go  config.go  customers.go  demo.go  helpers.go  json_output.go  keys.go  login.go  logout.go  products.go  root.go  styles.go
go/tui/: README.md  doc.go  license_gate.go  license_manager.go  license_status.go  messages.go  purchase_flow.go  qrcode.go  styles.go
go/tui/example/: main.go
py/: README.md  pyproject.toml
py/cli/: pyproject.toml
py/cli/src/tuish_cli/: __main__.py  config.py  output.py
py/cli/src/tuish_cli/commands/: __init__.py  analytics.py  customers.py  demo.py  keys.py  login.py  logout.py  products.py
py/cli/tests/: test_spec_cli_vectors.py
py/tests/: conftest.py  test_crypto.py  test_spec_vectors.py
py/tuish/: __init__.py  client.py  fingerprint.py  license.py  models.py
py/tuish_textual/: README.md  __init__.py  messages.py  pyproject.toml  state.py  utils.py
py/tuish_textual/widgets/: __init__.py  license_gate.py  license_manager.py  license_status.py  login_flow.py  purchase_flow.py  qr_code.py
rs/: Cargo.toml  README.md
rs/cli/: Cargo.toml
rs/cli/src/: main.rs
rs/cli/src/commands/: analytics.rs  customers.rs  demo.rs  keys.rs  login.rs  logout.rs  mod.rs  products.rs
rs/cli/tests/: spec_cli_vectors.rs
rs/examples/: basic.rs
rs/src/: browser.rs  crypto.rs  lib.rs  license.rs
rs/tests/: spec_vectors.rs
sdk-go/: fingerprint.go  fingerprint_test.go  storage_test.go  types.go
sdk-py/: README.md  pyproject.toml
sdk-py/tuish/: __init__.py  crypto.py  exceptions.py  storage.py  utils.py
sdk-rs/src/: client.rs  error.rs  fingerprint.rs  storage.rs  types.rs
sdk-ts/: README.md  biome.json  package.json
sdk-ts/apps/docs/: .gitignore  package.json  tsconfig.json  wrangler.jsonc
sdk-ts/apps/docs/content/docs/: index.mdx  meta.json
sdk-ts/apps/docs/src/app/: layout.tsx  page.tsx
sdk-ts/apps/docs/src/components/: BloomOverlay.tsx  Features.tsx  Footer.tsx  Hero.tsx  MatrixRain.tsx
sdk-ts/apps/example-cli/: tsup.config.ts
sdk-ts/apps/example-cli/src/: index.ts
spec/: README.md  cache.md  cli.md  fingerprint.md  flow.md  license.md  purchase.md  run-spec-tests.sh
spec/tests/: README.md
spec/tests/vectors/: cache.json  cli.json  fingerprint.json  license.json  license_check_flow.json  purchase.json
ts/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
ts/cli/: README.md  package.json  tsconfig.json  tsup.config.bundled_iejz55738ni.mjs  tsup.config.ts  vitest.integration.config.ts
ts/cli/src/: browser.tsx  headless.ts  index.tsx  types.ts
ts/cli/src/__tests__/: cli.integration.test.ts  spec-vectors.test.ts
ts/cli/src/context/: ConfigContext.tsx
ts/cli/src/hooks/: useApi.ts  useConfig.browser.ts  useConfig.ts  useUserLicense.ts
ts/cli/src/lib/: userConfig.ts
ts/cli/src/screens/: Connect.tsx  Dashboard.tsx  Login.tsx  Signup.tsx
ts/cli/src/stubs/: fs-shim.js  fs.ts
ts/cli/src/utils/: openUrl.browser.ts  openUrl.ts
ts/examples/cli/: package.json
(+32 files in other folders)
