[package]
name = "tuish"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Tuish TUI monetization"
license = "MIT"
repository = "https://github.com/tuishdotdev/tuish"
keywords = ["cli", "tui", "monetization", "license"]
categories = ["development-tools", "command-line-interface"]

[features]
default = ["http", "storage", "browser"]
http = ["dep:reqwest"]
storage = ["dep:dirs"]
browser = ["dep:open"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.12", features = ["json"], optional = true }
dirs = { version = "6", optional = true }
open = { version = "5", optional = true }
whoami = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
