[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuish"
version = "0.1.0"
description = "Tuish Python SDK - License verification and monetization for terminal apps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tuish", email = "support@tuish.dev" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://tuish.dev"
Documentation = "https://docs.tuish.dev"
Repository = "https://github.com/tuish/tuish"
