[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuish-textual"
version = "0.1.0"
description = "Textual TUI components for Tuish license verification and monetization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tuish", email = "support@tuish.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.40.0,<1.0.0",
    "qrcode>=7.0",
    "pillow>=9.0.0",
]

# Note: tuish package is a local dependency, install separately:
# pip install -e ../tuish

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://tuish.dev"
Documentation = "https://docs.tuish.dev/python/textual"
Repository = "https://github.com/tuishdotdev/tuish"
Issues = "https://github.com/tuishdotdev/tuish/issues"

[tool.hatch.build.targets.wheel]
packages = ["tuish_textual"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
