[package]
name = "tuish-cli"
version = "0.1.0"
edition = "2021"
description = "Tuish developer CLI"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Local SDK dependency
[dependencies.tuish]
path = ".."

[dev-dependencies]
tempfile = "3"
